installation directory by the user will no longer be deleted when ooRexx
is uninstalled.  This behavior will be in effect for the uninstallation of
ooRexx 4.0.0 and future versions of ooRexx, there is no change in the
3.2.0 uninstallation.  When a 3.2.0, or earlier, version of ooRexx is
uninstalled, all files in the installation directory are deleted.


Windows Scripting Host:
-----------------------

The Windows Scripting Host support in ooRexx 4.0.0 has been temporarily
disabled.  This was done after soliciting input from users.  Temporarily
disabling WSH allows the release of 4.0.0 to be months sooner than it
would have been otherwise.  The consensus of users was that they would
prefer an early release without WSH than a later release with WSH.  The
intent is to deliver WSH as soon as possible in a follow-on minor release.

Some possible differences in program behavior:
----------------------------------------------

Files loaded by ::requires are loaded by a global package manager, and
a given file will only be loaded once in a process.  This means multiple
programs referring to a ::requires file will be accessing a single set of
created classes and routines rather than each ending up with a unique
set.

Due to a bug in prior releases of ooRexx and Object Rexx, a negative
return code from a Rexx program could be transformed to a positive return
code to the operating system.  This bug is now fixed.

Due to a bug in prior releases, methods created with ::METHOD ATTRIBUTE
or ::ATTRIBUTE did not properly recognize the GUARDED status of methods.
All attribute methods behaved like they were UNGUARDED.

The RxFuncAdd now checks that a registered function can be resolved at
registration time and will return a failure if it cannot.  This is how
many believed it worked originally.

Some returns from the rxMath package were not consistent.  As an example,
on Windows, NaN (Not a Number) was returned as the string "ERROR" while on